SERVER-42491 Ensure DocumentSourceSort does not crash on searchScore or searchHighlights